# MineSweep

./: CMakeLists.txt  README
include/: board.h  box.h  interaction.h
src/: board.c  box.c  interaction.c  minesweep.c
